ISIS-2133 major: pulling fixture-script related code out of core
- new extension 'fixtures'
- new extension 'specsupport'
- parks all the headless stuff in specsupport, which is currently broken